# Projet-5A

./: .gitignore  .pdm-python  Makefile  Makefile_Windows  README.md  coverage_output.txt  pendu.py  pyproject.toml  requirements.txt
.github/workflows/: generate-docs.yml
docs/: Pendu.rst  conf.py  index.rst  stratosmaestro.rst
docs/_build/doctrees/: Pendu.doctree  environment.pickle  index.doctree  modules.doctree  stratosmaestro.doctree
docs/_build/doctrees/source/: Pendu.doctree  modules.doctree  stratosmaestro.doctree
docs/_build/html/: Pendu.html  modules.html  objects.inv  searchindex.js  stratosmaestro.html
docs/_build/html/_sources/source/: modules.rst.txt
docs/_build/html/source/: Pendu.html  modules.html  stratosmaestro.html
src/: Pendu.py  pendu.py
tests/: test_pendu.py
