[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jeu-du-pendu"
version = "1.0.0"
description = "Un jeu du pendu en Python, simple et éducatif."
authors = [
    { name = "StratosMaestro", email = "mehdi.elhilali@estaca.eu" }
]
license = { file = "LICENSE" }
keywords = ["jeu", "pendu", "python", "jeu éducatif"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["jeu_du_pendu"]

[tool.setuptools.package-data]
jeu_du_pendu = ["*.txt"]

[tool.setuptools.scripts]
jeu-du-pendu = "main:jouer"
