[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jeu-du-pendu"
version = "1.0.0"
description = "Un jeu du pendu en Python, simple et éducatif."
authors = [
    { name = "Mehdi Hilali", email = "mehdi.elhilali@estaca.eu" }
]
license = { file = "LICENSE" }
keywords = ["jeu", "pendu", "python", "jeu éducatif"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["pendu"]

[tool.setuptools.package-data]
pendu = ["*.txt"]

[tool.setuptools.scripts]
pendu = "main"

[tool.coverage]
exclude = [
    "tests/*",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=pendu --cov-report=term-missing"
testpaths = ["tests"]

[project.optional-dependencies]
testing = [
    "pytest>=6.0",
    "pytest-cov>=2.12"
]
